samples/_failures_safe/1761329826_6996c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b3081eb.c: In function ‘bfs’:
./samples/SAFE/__tmp_4b3081eb.c:163:17: error: expected declaration or statement at end of input
  163 |                 int neighbor = graph->edges[i].destination;
      |                 ^~~
./samples/SAFE/__tmp_4b3081eb.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b3081eb.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b3081eb.c:163:17: error: expected declaration or statement at end of input
